# basango

./: .dockerignore  .env  .gitattributes  .gitignore  AGENTS.md  DATABASE_MIGRATION.md  Dockerfile  LICENSE.md  Makefile  README.md  SECURITY.md  biome.json  compose.yaml  ecosystem.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json  turbo.json
basango/: .gitignore  README.md  SECURITY.md  biome.json  (+3 more)
projects/crawler/: .env  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
projects/crawler/config/: pipeline.dev.yaml  pipeline.prod.yaml  pipeline.yaml
projects/crawler/src/basango/: __init__.py  cli.py
projects/crawler/src/basango/core/: config_manager.py  project_paths.py
projects/crawler/src/basango/core/config/: logging_config.py
projects/crawler/src/basango/domain/: __init__.py  article.py  exception.py  page_range.py  source.py  token_statistics.py
projects/crawler/src/basango/services/: __init__.py  http_client.py  open_graph.py  tokenizer.py  user_agents.py
projects/crawler/src/basango/services/crawler/: async_api.py  base_crawler.py  html_crawler.py  wordpress_crawler.py
projects/crawler/src/basango/services/http_client/: __init__.py  async_http_client.py  base_http_client.py  sync_http_client.py
projects/crawler/src/basango/services/persistence/: __init__.py  api_persistor.py  base_persistor.py  csv_persistor.py  json_persistor.py
projects/crawler/tests/basango/domain/: test_page_range.py
projects/crawler/tests/basango/services/crawler/: test_html_crawler.py  test_wordpress_crawler.py
(+814 files in other folders)
