[project]
name = "basango"
version = "0.1.0"
description = "Basango : Distrubted Web Scrapper for DRC News"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "typer>=0.16.1",
    "uv-build>=0.8.12,<0.9.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[project.scripts]
basango = "basango:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
